# egon-content

./: .env.example  .gitignore  README.md  image_generator.py  main.py  packs.py  prompts.py  pyproject.toml  utils.py
.github/workflows/: lint.yml  tests.yml
egon/: cli.py  graph.py  image_generator.py  linker.py  packs.py  prompts.py  questionnaire_data.py  questionnaire_formatter.py
egon/generators/: __init__.py  logseq.py  obsidian.py
generated_content/logseq/: graph-data.txt  graph-report.txt
generated_content/obsidian/: graph-data.txt  graph-report.txt
generators/: logseq.py  obsidian.py
prompts/: article_system.txt  image_style.txt
tests/: test_cli.py  test_generators.py  test_graph.py  test_image_generator.py  test_questionnaires.py  test_utils.py
