[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["egon"]

[tool.uv]
package = true

[project]
name = "egon-content"
version = "0.1.0"
description = "CLI tool to generate mental health Markdown articles for Logseq or Obsidian"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.49.0",
    "matplotlib>=3.9.0",
    "networkx>=3.4.0",
    "openai>=1.70.0",
    "pillow>=11.0.0",
    "typer>=0.15.0",
    "python-dotenv>=1.1.0",
]

[project.scripts]
egon = "egon.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
addopts = "--cov=egon --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
source = ["egon"]
omit = ["tests/*", ".venv/*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["F401"]
